# eagle-eye-ai

./: .gitignore  README.md  build.sh  build_eagle_eye_docker.sh  build_ros2_docker.sh  dev_run.sh  eagle-eye-docker  kria-developer  kria-runtime  ros2-humble-docker  ros2_humble_run.sh  run.sh  run_eagle_eye_docker.sh  run_ros2_humble.sh
eagle-eye-app/: CMakeLists.txt  README  README.md
eagle-eye-app/config/facedetect/: aiinference.json  drawresult.json  preprocess.json
eagle-eye-app/src/: vvas_airender.cpp  vvas_airender.hpp  vvas_xpp_pipeline.c
fpga-firmware/: README.md  firmware-kr260-eagle-eye.deb
fpga-firmware/firmware-kr260-eagle-eye/DEBIAN/: control  postinst
fpga-firmware/firmware-kr260-eagle-eye/lib/firmware/xilinx/kr260-eagle-eye/: kr260-eagle-eye.dtbo  kr260-eagle-eye.dtsi  kr260-eagle-eye.xclbin
fpga-firmware/src/block_design/: config_bd.tcl
fpga-firmware/src/dts/: update_dtsi.txt
fpga-firmware/src/xdc/: pin.xdc
ros2_ws/src/eagle_eye_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/eagle_eye_bringup/launch/: follow_cam.launch.xml
ros2_ws/src/eagle_eye_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/eagle_eye_interfaces/msg/: CameraOrientation.msg  FaceDetect.msg
ros2_ws/src/eagle_eye_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/eagle_eye_pkg/include/eagle_eye_pkg/: cameradata.h  gst_inference_meta.h
ros2_ws/src/eagle_eye_pkg/src/: gstreamer_pipeline.cpp
ros2_ws/src/rotator_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/rotator_interfaces/action/: SetRotatorPosition.action
ros2_ws/src/rotator_interfaces/msg/: MotorCmd.msg  SwitchCmd.msg
ros2_ws/src/rotator_interfaces/srv/: GetRotatorPosition.srv
ros2_ws/src/rotator_py_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/rotator_py_pkg/rotator_py_pkg/: btn_controller.py  camera_controller.py  led_controller.py  rotator_controller.py
ros2_ws/src/rotator_py_pkg/rotator_py_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/rotator_py_pkg/rotator_py_pkg/log/: latest_build
scripts/: make_wic_image.sh  run_eagle_eye_ai.sh  test.sh  welcome.sh
